--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,12 @@
-platform :ios, '9.0'
+
+platform :ios, '10.0'
 use_frameworks!
 
 target 'OnebyteSwiftNetworkCycle_Example' do
 
+  pod 'Alamofire', '~> 4.0'
+  pod 'OnebyteSwiftNetworkCycle', '~> 0.2.0'
+  
   target 'OnebyteSwiftNetworkCycle_Tests' do
     inherit! :search_paths
 
